# Sidekick

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BRAND.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CUTOVER_STEPS.md  Cargo.toml  Cargo.toml.bak  Dockerfile  PYTHON_INTEGRATION.md  README.md  RELEASE.md  SPECS_INDEX.md  SSOT.md  SUPPORT.md  VIBECODING_GUARD_BASELINE_2026_06_12.md  audit_scorecard.json  deny.toml  justfile  llms.txt  nextest.toml  release-registry.toml  sbom.cdx.json  substrate-audit-dag-plan.md  worklog.md
.github/: dependabot.yml  labeler.yml  release-drafter.yml  scorecard.yml
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  doc-links.yml  docs.yml  fr-coverage.yml  quality-gate.yml  release-attestation.yml  sbom-refresh.yml  scorecard.yml  trufflehog.yml
crates/cheap-llm-mcp/: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_REQUIREMENTS.md  Makefile  README.md  Taskfile.yml  justfile  ruff.toml  worklog.md
crates/cheap-llm-mcp/claude/: thegent-unified-design.md
crates/cheap-llm-mcp/config/: cheap-llm.example.toml
crates/cheap-llm-mcp/docs/: FUNCTIONAL_REQUIREMENTS.md  graduation_to_phenomcp.md
crates/cheap-llm-mcp/tests/: conftest.py  test_cache.py  test_cli_stubs.py  test_config.py  test_health_probe.py  test_ledger.py  test_logging.py  test_metrics.py  test_observability_stubs.py  test_openai_compat.py  test_retry.py  (+7 more)
crates/sidekick-messaging/: Cargo.toml  README.md  sidekick-messaging.cdx.json
crates/sidekick-messaging/src/: error.rs  ipc.rs  lib.rs  messages.rs
crates/sidekick-messaging/tests/: adapter_stubs.rs  observability_stubs.rs  storage_stubs.rs
crates/sidekick-obs-core/: Cargo.toml
crates/sidekick-obs-core/src/: correlation.rs  health.rs  lib.rs  log_levels.rs  metrics.rs
crates/sidekick-obs-core/tests/: integration.rs
crates/sidekick-observability/: Cargo.toml
crates/sidekick-observability/src/: lib.rs
deploy/: Dockerfile.cheap-llm-mcp  docker-compose.yml
docs/: FUNCTIONAL_REQUIREMENTS.md  consolidation_notes.md  getting-started.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mjs
docs/audit/: AUDIT.md
docs/boundary/: sidekick.md
docs/intent/: sidekick.md
docs/operations/: DEPLOY.md  GRACEFUL_SHUTDOWN.md
docs/remediation/: DATA.md  GOVERNANCE.md  OBSERVABILITY.md  OBSERVABILITY_WIREUP.md  OPS.md
docs/security/: sbom.json
docs/specs/: SPEC.md
docs/worklogs/: ARCHITECTURE.md  GOVERNANCE.md  RESEARCH.md
tests/: coverage_stubs.rs
(+56 files in other folders)
