[workspace]
members = [
    "crates/sidekick-dispatch",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Koosha Pari <kooshapari@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/Sidekick"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
