[workspace]
members = [
    "crates/sidekick-messaging",
    "crates/sidekick-obs-core",
    "crates/sidekick-observability",
  ]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Koosha Pari <kooshapari@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/KooshaPari/Sidekick"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[workspace.metadata.cargo-machete]
ignored = ["tracing"]

[profile.release]
opt-level = 3
lto = true
