[package]
name = "sidekick-obs-core"
version = "0.0.1"
edition = "2021"
authors = ["Koosha Pari <kooshapari@gmail.com>"]
license = "Apache-2.0"
description = "Correlation IDs, health probes, metrics hooks, and log-level helpers for Sidekick"
repository = "https://github.com/KooshaPari/Sidekick"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4"] }

[[bin]]
name = "sidekick-healthcheck"
path = "src/bin/healthcheck.rs"
